changed connection string

--- a/docker-k8s-fundamentals/Globomantics.Core/appsettings.json
+++ b/docker-k8s-fundamentals/Globomantics.Core/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "GlobomanticsDb": "Server=.\\sqlexpress;Database=Globomantics;Integrated Security=true;MultipleActiveResultSets=true"
+    "GlobomanticsDb": "Server=localhost;Database=Globomantics;MultipleActiveResultSets=true;User Id=sa;Password=Password1;"
   },
   "AuthN": {
     "Authority": "https://localhost:44377",
