--- a/docker-k8s-fundamentals/Globomantics.IdentityServer/appsettings.json
+++ b/docker-k8s-fundamentals/Globomantics.IdentityServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "IS4DbConnection": "Server=.\\sqlexpress;Database=GlobomanticsIdSrv;Integrated Security=true;;MultipleActiveResultSets=true",
-    "GlobomanticsDb": "Server=.\\sqlexpress;Database=Globomantics;Integrated Security=true;MultipleActiveResultSets=true"
+    "IS4DbConnection": "Server=localhost;Database=GlobomanticsIdSrv;MultipleActiveResultSets=true;User Id=sa;Password=Password1;",
+    "GlobomanticsDb": "Server=localhost;Database=Globomantics;;MultipleActiveResultSets=true;User Id=sa;Password=Password1;"
   },
   "Email": {
     "SmtpServer": "localhost",
